# core

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/: copilot-instructions.md
.github/agents/: Jarvis.agent.md
.github/instructions/: header-files.instructions.md  makefile.instructions.md
.github/workflows/: build-test.yml  qodana_code_quality.yml
.windsurf/rules/: pixellib.md
include/: filesystem.hpp  json.hpp  logging.hpp  network.hpp
include/interlaced_core/: json.hpp  logging.hpp  network.hpp
scripts/: generate_coverage.sh
tests/: CMakeLists.txt  doctest_main.cpp  json_test.cc  logging_test.cc  test_filesystem.cc  test_framework.hpp  test_json.cc  test_logging.cc  test_main.cc  test_network.cc  test_network_helpers.cc  test_sanity.cc
tools/: get_doctest.sh  run-clang-tidy.sh
